--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 3.1)
-project(pdist_example)
+project(ncfs_fit)
 
 find_package(xtl REQUIRED)
 find_package(xtensor REQUIRED)
 # find_package(xtesnor-blas REQUIRED)
 # if xtensor was built with xsimd support:
-# find_package(xsimd REQUIRED)
+find_package(xsimd REQUIRED)
 
-set(SOURCE_FILES pdist_example.cpp distance.cpp ncfs.cpp)
-add_executable(pdist_example ${SOURCE_FILES})
+set(SOURCE_FILES ncfs_fit.cpp distance.cpp ncfs.cpp)
+add_executable(ncfs_fit ${SOURCE_FILES})
 
 if(MSVC)
-    target_compile_options(pdist_example PRIVATE /EHsc /MP /bigobj)
+    target_compile_options(ncfs_fit PRIVATE /EHsc /MP /bigobj)
     set(CMAKE_EXE_LINKER_FLAGS /MANIFEST:NO)
 endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR
     CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR
     (CMAKE_CXX_COMPILER_ID MATCHES "Intel" AND NOT WIN32))
-    target_compile_options(pdist_example PRIVATE -march=native -std=c++14)
+    target_compile_options(ncfs_fit PRIVATE -march=native -std=c++14)
 endif()
 
 add_definitions(-DHAVE_CBLAS=1)
@@ -34,4 +34,4 @@ endif()
 message(STATUS "BLAS VENDOR:    " ${BLA_VENDOR})
 message(STATUS "BLAS LIBRARIES: " ${BLAS_LIBRARIES})
 
-target_link_libraries(pdist_example xtensor ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+target_link_libraries(ncfs_fit xtensor ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
